[FEATURE] Replaced String.format to formatted (#665)